--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-manager",
   "version": "1.0.0",
-  "description": "At a later date I would like to come back to this project and add some functionalities - like making saved fields editable, but right now I feel like I've spent a lot of time on it, and I would like to return to progressing through TOP's modules.",
+  "description": "",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
